--- a/index.html
+++ b/index.html
@@ -1,84 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Preview</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+    <meta charset="utf-8"/>
+    <title>JS Studying/ Metanit</title>
 
-        body {
-            background: linear-gradient(135deg, #1e1e2e, #232946);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: white;
-        }
-
-        .preview-card {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            padding: 20px;
-            width: 320px;
-            text-align: center;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .preview-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .preview-card img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            border: 3px solid white;
-            margin-bottom: 15px;
-        }
-
-        .preview-card h2 {
-            font-size: 22px;
-            margin-bottom: 5px;
-        }
-
-        .preview-card p {
-            font-size: 14px;
-            opacity: 0.8;
-            margin-bottom: 15px;
-        }
-
-        .preview-button {
-            display: inline-block;
-            background: #ff6b81;
-            padding: 10px 20px;
-            border-radius: 25px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            transition: background 0.3s ease-in-out;
-        }
-
-        .preview-button:hover {
-            background: #ff4757;
-        }
-    </style>
 </head>
 <body>
-
-<div class="preview-card">
-    <img src="https://via.placeholder.com/100" alt="Profile">
-    <h2>John Doe</h2>
-    <p>Web Developer & Designer</p>
-    <a href="#" class="preview-button">View Profile</a>
-</div>
-
+<script src="main.js">
+</script>
 </body>
 </html>
